vbnc/vbnc/tests/Errors/30126.vb
Public Class SomeClass
    Public ReadOnly Property Prop As Integer
    End Property
End Class